<resources>
    <string name="app_name" translatable="false">Summary News</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_liked">Me gusta</string>
    <string name="menu_saved">Guardados</string>
    <string name="guardar">Guardar</string>
    <string name="me_gusta">Me gusta</string>
    <string name="enlace_fuente_original">Enlace fuente original</string>
    <string name="no_hay_noticias">No hay noticias disponibles en este momento. Pulsa el botón flotante para cargarlas.
    Ten en cuenta que el proceso puede tardar alrededor de 20 segundos.</string>
    <string name="no_hay_noticias_categoria">No hay noticias para esta categoría</string>
    <string name="no_hay_noticias_guardadas">No hay noticias guardadas</string>
    <string name="resumen_general">Resumen General</string>
    <string name="titulo_estadisticas">Aquí aparecerán estadísticas sobre tus Likes</string>
    <string name="likes_por_categoria">Likes por Categoría</string>
    <string name="total_likes_formateado">Total de likes dados: %d</string>
    <string name="categoria_mas_likeada_formateado">Categoría que más te gusta: %1$s (%2$d likes)</string>
    <string name="categoria_mas_likeada_ninguna">Categoría que más te gusta: Ninguna</string>
    <string name="categoria_menos_likeada_formateado">Categoría menos te gusta: %1$s (%2$d likes)</string>
    <string name="categoria_menos_likeada_ninguna">Categoría menos te gusta: Ninguna</string>
    <string name="inicia_sesi_n_en_summary_news">Inicia Sesión en Summary News</string>
    <string name="todo">TODO</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tienes_usuario_registrate">¿No tienes usuario? Regístrate</string>
    <string name="m_vil_o_correo_electr_nico">Móvil o correo electrónico</string>
    <string name="reg_strate_para_empezar_a_ver_noticias">Regístrate para empezar a ver noticias</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="registrate">Regístrate</string>
    <string name="ya_tienes_usuario_inicia_sesi_n">¿Ya tienes usuario? Inicia sesión</string>
    <string name="categoria">Categoría</string>
    <string name="_5_likes">5 likes</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="descripcion_icono_ajustes">Icono de la pantalla de ajustes</string>
    <string name="ajustes_de_la_aplicacion">Ajustes de la Aplicación</string>
    <string name="configura_tu_experiencia">Configura tu experiencia</string>
    <string name="apariencia">Apariencia</string>
    <string name="automatico_usar_tema_del_sistema">Automático (usar tema del sistema)</string>
    <string name="idioma_y_region">Idioma y región</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="permitir_notificaciones">Permitir notificaciones</string>
    <string-array name="opciones_spinner">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

</resources>