<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.summarynews.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_liked"
        android:name="com.example.summarynews.ui.meGusta.MeGustaFragment"
        android:label="@string/menu_liked"
        tools:layout="@layout/fragment_megusta" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.summarynews.ui.guardados.GuardadosFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_guardados" />
</navigation>