<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="97dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textViewRegistroTitulo"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reg_strate_para_empezar_a_ver_noticias"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nombre_de_usuario"
        android:background="@drawable/edittext_background"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRegistroTitulo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:hint="@string/m_vil_o_correo_electr_nico"
        android:background="@drawable/edittext_background"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:hint="@string/contrasena"
        android:background="@drawable/edittext_background"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/registrate"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <Button
        android:id="@+id/btnIrALogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ya_tienes_usuario_inicia_sesi_n"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

</androidx.constraintlayout.widget.ConstraintLayout>
