<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivNewsImage"
            android:layout_width="421dp"
            android:layout_height="196dp"
            android:background="@drawable/rounded_background"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans"
            android:paddingTop="8dp"
            android:text="La previsible derrota de Trump y cómo aprovecharla como aprovecharla si."
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/ivNewsImage" />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="325dp"
            android:layout_height="104dp"
            android:layout_marginTop="66dp"
            android:fontFamily="sans-serif"
            android:paddingTop="4dp"
            android:text="Apple desarrolla en China alrededor del 90% de su producción total, afirma The New York Times. Hacer un iPhone al 100% en Estados Unidos obligaría a venderlo en 3,500 dólares por unidad, tres veces su precio actual, lo cual desplomaría a sus ventas."
            android:textColor="@color/text_color"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="@+id/tvTitle"
            card_view:layout_constraintTop_toBottomOf="@+id/ivNewsImage" />

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="141dp"
            android:layout_height="33dp"
            android:layout_marginTop="16dp"
            android:text="@string/enlace_fuente_original"
            android:textAlignment="gravity"
            android:textColor="@color/link_color"
            android:textColorLink="#3273A9"
            card_view:layout_constraintStart_toStartOf="@+id/tvSummary"
            card_view:layout_constraintTop_toBottomOf="@+id/tvSummary" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/me_gusta"
            card_view:layout_constraintStart_toEndOf="@+id/tvLink"
            card_view:layout_constraintTop_toBottomOf="@+id/tvSummary"
            card_view:srcCompat="@drawable/heart_outline"
            card_view:tint="@color/gray" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/guardar"
            card_view:layout_constraintStart_toEndOf="@+id/tvLink"
            card_view:layout_constraintTop_toBottomOf="@+id/tvSummary"
            card_view:srcCompat="@drawable/bookmark_outline"
            card_view:tint="@color/gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
